[package]
name = "p-lend"
version = "0.1.0"
edition = "2021"

[dependencies]
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
bytemuck = { version = "1.23.0", features = ["derive"] }

[target.'cfg(not(target_os = "solana"))'.dependencies]
curve25519-dalek = "4.1.3"
sha2 = "0.10"

[dev-dependencies]
litesvm = "0.8.1"
hex = "0.4"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-native-token = "3.0.0"
solana-pubkey = "3.0.0"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-transaction = "3.0.1"
solana-message = "3.0.1"
solana-sdk-ids = "3.0.0"
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = "8.0.0"
solana-rpc-client = "3.0.3"
solana-address = "1.0.0"
solana-account = "3.2.0"